--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ project(isa)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
-set(SOURCE_FILES main.cpp SNMPClient.cpp SNMPPacket.cpp types.cpp)
+set(SOURCE_FILES main.cpp SNMPClient.cpp SNMPPacket.cpp types.cpp InterfaceInfoContainer.cpp)
 add_executable(isa ${SOURCE_FILES})
 
 if(WIN32)
